# MyCppPrj

./: .gitmodules  CMakeLists.txt
cli/: BaseDevCli.h  CMakeLists.txt  Main.cpp  MyCli.h  MyDevCli.h
cpp/: BaseClass.h  CMakeLists.txt  MyDev.cpp  MyDev.h  gtypes.h  main.cpp
pybind/: CMakeLists.txt  PyMyDev.cpp
tests/: CMakeLists.txt  tests.cpp
